<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rage.clamber.Activities.LoginActivity">
    <TextView
        android:id="@+id/login_activity_new_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textSize="20sp"
        android:textAlignment="center"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_activity_new_user_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_new_user_text"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_username_here"
            android:gravity="center"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login_activity_submit_new_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:textColor="@android:color/white"
        android:layout_below="@id/login_activity_new_user_edit_text"
        android:background="@color/clamberMainText"
        android:layout_marginBottom="15dp"
        />
        <TextView
            android:id="@+id/login_activity_already_user_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_username"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    <EditText
        android:id="@+id/login_activity_already_user_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_already_user_text_view"
        android:hint="@string/enter_username_here"
        />
    <Button
        android:id="@+id/login_activity_submit_already_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:textColor="@android:color/white"
        android:layout_below="@id/login_activity_already_user_edit_text"
        android:background="@color/clamberMainText"
        android:layout_marginBottom="15dp"
        />

</RelativeLayout>
